--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "pnpm lint:js && pnpm lint:prettier",
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"lint": "pnpm lint:js && pnpm lint:prettier",
 		"lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
 		"lint:prettier": "prettier --check .",
 		"lintfix": "prettier --write --list-different . && pnpm lint:js --fix"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "nuxt": "^3.8.1",
-    "prettier": "^3.0.3",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
-  }
+	},
+	"devDependencies": {
+		"@nuxt/devtools": "latest",
+		"@nuxtjs/eslint-config-typescript": "^12.1.0",
+		"@nuxtjs/tailwindcss": "^6.9.4",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/forms": "^0.5.6",
+		"@tailwindcss/typography": "^0.5.10",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
+		"@vue/eslint-config-standard": "^8.0.1",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-nuxt": "^4.0.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-tailwindcss": "^3.13.0",
+		"eslint-plugin-vue": "^9.18.1",
+		"nuxt": "^3.8.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.7",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.2.2",
+		"vue": "^3.3.8",
+		"vue-eslint-parser": "^9.3.2",
+		"vue-router": "^4.2.5"
+	},
+	"dependencies": {
+		"@pinia/nuxt": "^0.5.1"
+	}
 }
